syntax = "proto3";
option java_package = "Grpc";

message UserGetRequest{
  string email = 1;
}
message UserGetResponse{
  string response = 1;
}
message UserSaveRequest{
  string email = 1;
  string password = 2;
  string name = 3;
}
message UserSaveResponse{
  string response = 1;
}
message SearchUserRequest{
  string name = 1;
}
message SearchUserResponse{
  string response = 1;
  int32 status = 2;
}
service UserService{
  rpc getUserByEmail(UserGetRequest) returns(UserGetResponse);
  rpc saveUser(UserSaveRequest) returns(UserSaveResponse);
  rpc searchUser(SearchUserRequest) returns(SearchUserResponse);
}